# ml_discounts

./: .gitignore  1_data_extraction.ipynb  3_EDA.ipynb  4_models.ipynb  README.md  classifier_discount_model.json  data_report_preprocessed_EDA.html  extraccion_datos.ipynb  pyproject.toml  regression_discount_model.json
data/: data_items_MCO1000_0.csv  data_items_MCO1000_100.csv  data_items_MCO1000_1000.csv  data_items_MCO1000_1050.csv  data_items_MCO1000_1100.csv  data_items_MCO1000_1150.csv  data_items_MCO1000_1200.csv  data_items_MCO1000_1250.csv  data_items_MCO1000_1300.csv  data_items_MCO1000_1350.csv  data_items_MCO1000_1400.csv  data_items_MCO1000_1450.csv  data_items_MCO1000_150.csv  data_items_MCO1000_1500.csv  data_items_MCO1000_1550.csv  data_items_MCO1000_1600.csv  data_items_MCO1000_1650.csv  data_items_MCO1000_1700.csv  data_items_MCO1000_1750.csv  data_items_MCO1000_1800.csv  data_items_MCO1000_1850.csv  data_items_MCO1000_1900.csv  data_items_MCO1000_1950.csv  data_items_MCO1000_200.csv  data_items_MCO1000_2000.csv  data_items_MCO1000_2050.csv  data_items_MCO1000_2100.csv  data_items_MCO1000_2150.csv  data_items_MCO1000_2200.csv  data_items_MCO1000_2250.csv  data_items_MCO1000_2300.csv  data_items_MCO1000_2350.csv  data_items_MCO1000_2400.csv  data_items_MCO1000_2450.csv  data_items_MCO1000_250.csv  data_items_MCO1000_2500.csv  data_items_MCO1000_2550.csv  data_items_MCO1000_2600.csv  data_items_MCO1000_2650.csv  data_items_MCO1000_2700.csv  (+2520 more)
scripts/data/: api_access.py  data_acquisition.py  data_preprocessing.py
scripts/model/: model_classification.py
(+3 files in other folders)
