[tool.poetry]
name = "ml-challenge"
version = "0.1.0"
description = "Generación de sugerencias de descuentos para productos de MercadoLibre"
authors = ["Heiler Santiago Gómez Prieto <hsgomezp@unal.edu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.0"
requests = "^2.31.0"
plotnine = "^0.13.0"
ipykernel = "^6.29.2"
pyarrow = "^15.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
