[tool.poetry]
name = "ml-challenge"
version = "0.1.0"
description = "Generación de sugerencias de descuentos para productos de MercadoLibre"
authors = ["Heiler Santiago Gómez Prieto <hsgomezp@unal.edu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = ">=2.0.0"
requests = "^2.31.0"
plotnine = "^0.13.0"
ipykernel = "^6.29.2"
pyarrow = "^15.0.0"
pandas-profiling = "^3.6.6"
ipywidgets = "^8.1.2"
kaleido = "0.2.1"
pycaret = "^3.3.0"
scikit-learn = "^1.4.1.post1"
xgboost = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
